--- a/index.html
+++ b/index.html
@@ -38,21 +38,24 @@
                     <h1 class="fw-bold">iMac with Apple M1 Chip</h1>
                     <div class="d-flex mt-5">
                         <p class="fw-bold">Memory</p>
-                        <p class="ms-5 add-style">8GB Unified Memory</p>
-                        <p class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 16GB Unified Memory</p>
+                        <p id="eightGB" class="ms-5 add-style">8GB Unified Memory</p>
+                        <p id="sixteenGB" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 16GB Unified
+                            Memory</p>
                     </div>
 
                     <div class="d-flex mt-5">
                         <p class="fw-bold">Storage</p>
-                        <p class="ms-5 add-style">256GB SSD Storage</p>
-                        <p class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 512GB SSD Storage</p>
-                        <p class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 1TB SSD Storage</p>
+                        <p id="ssd1" class="ms-5 add-style">256GB SSD Storage</p>
+                        <p id="ssd2" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 512GB SSD Storage
+                        </p>
+                        <p id="ssd3" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 1TB SSD Storage</p>
                     </div>
 
                     <div class="d-flex mt-5">
                         <p class="fw-bold">Choose your delivery option</p>
-                        <p class="ms-5 add-style">Friday, Aug 25 FREE Prime Delivery</p>
-                        <p class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> Friday, Aug21 Delivery Charge
+                        <p id="free-delivery" class="ms-5 add-style">Friday, Aug 25 FREE Prime Delivery</p>
+                        <p id="paid-delivery" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> Friday,
+                            Aug21 Delivery Charge
                             $20</p>
                     </div>
 
@@ -66,10 +69,10 @@
                                 <p class="fw-bold">Delivery Charge</p>
                             </div>
                             <div class="col-2">
-                                <p class="fw-bold">$<span>1299</span></p>
-                                <p class="fw-bold">$<span>0</span></p>
-                                <p class="fw-bold">$<span>0</span></p>
-                                <p class="fw-bold">$<span>0</span></p>
+                                <p class="fw-bold">$<span id="best-price">1299</span></p>
+                                <p class="fw-bold">$<span id="memory-cost">0</span></p>
+                                <p class="fw-bold">$<span id="storage-cost">0</span></p>
+                                <p class="fw-bold">$<span id="delivery-cost">0</span></p>
                             </div>
                             <div class="col-7">
                                 <hr class="bold-line">
@@ -80,7 +83,7 @@
                                 <p class="fw-bold">Total Price</p>
                             </div>
                             <div class="col-2">
-                                <p class="fw-bold">$<span>1299</span></p>
+                                <p class="fw-bold">$<span id="total-price">1299</span></p>
                             </div>
                         </div>
 
@@ -99,6 +102,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+    <!-- Vanilla JavaScript -->
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
