--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
                 <div class="col">
                     <h1 class="fw-bold">iMac with Apple M1 Chip</h1>
-                    <div class="d-flex mt-5">
+                    <div class="d-flex align-items-center mt-5">
                         <p class="fw-bold">Memory</p>
                         <p id="eightGB" class="ms-5 add-style">8GB Unified Memory</p>
                         <p id="sixteenGB" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 16GB Unified
                             Memory</p>
                     </div>
 
-                    <div class="d-flex mt-5">
+                    <div class="d-flex align-items-center mt-5">
                         <p class="fw-bold">Storage</p>
                         <p id="ssd1" class="ms-5 add-style">256GB SSD Storage</p>
                         <p id="ssd2" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 512GB SSD Storage
@@ -51,12 +51,12 @@
                         <p id="ssd3" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> 1TB SSD Storage</p>
                     </div>
 
-                    <div class="d-flex mt-5">
+                    <div class="d-flex align-items-center mt-5">
                         <p class="fw-bold">Choose your delivery option</p>
                         <p id="free-delivery" class="ms-5 add-style">Friday, Aug 25 FREE Prime Delivery</p>
                         <p id="paid-delivery" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> Friday,
                             Aug21 Delivery Charge
-                            $20</p>
+                            $21</p>
                     </div>
 
                     <!-- price -->
@@ -91,7 +91,9 @@
                         <div class="mt-5">
                             <p class="fw-bold">Add Promo Code</p>
                             <input class="p-2" type="text" id="promo-input" placeholder="Enter Promo Code">
-                            <button class="btn btn-secondary px-3 py-2">Apply</button>
+                            <button class="btn btn-secondary px-3 py-2" id="apply-button">Apply</button>
+                            <p class="text-success" id="success">Coupon applied</p>
+                            <p class="text-danger" id="error">Couldn't apply coupon</p>
                         </div>
                     </div>
                 </div>
