again text update

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
                     <div class="d-flex align-items-center mt-5">
                         <p class="fw-bold">Choose your delivery option</p>
-                        <p id="free-delivery" class="ms-5 add-style">Friday FREE Prime Delivery</p>
-                        <p id="paid-delivery" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i> Friday,
-                            Saturday - Thursday, Delivery Charge
+                        <p id="free-delivery" class="ms-5 add-style">Friday, FREE Prime Delivery</p>
+                        <p id="paid-delivery" class="ms-5 add-style"><i class="fa-solid fa-circle-plus"></i>Saturday -
+                            Thursday, Delivery Charge
                             $21</p>
                     </div>
 
